--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: JetBrains Mono;
+	src: url('../src/fonts/JetBrainsMono-Regular.ttf');
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -6,6 +11,7 @@
 
 html {
 	font-size: 62.5%;
+	font-family: JetBrains Mono;
 }
 
 a {
@@ -33,12 +39,38 @@ header a {
 .sidebar {
 	position: absolute;
 	top: 0;
-	left: -60%;
-	transition: 0.4s;
 	width: 60%;
 	height: 100vh;
-	background: rgba(255, 255, 255, 0.3);
+	left: -60%;
+	background: rgba(255, 255, 255, 0.4);
 	backdrop-filter: blur(5px);
+	transition: 0.4s;
+	z-index: 1000;
+}
+
+.change-color-container {
+	width: 100%;
+	height: 30%;
+}
+
+.operations-container {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 50%;
+	overflow-y: scroll;
+}
+.operations-container::-webkit-scrollbar {
+	display: none;
+}
+
+.operations-container p {
+	font-size: 2.3rem;
+	padding: 10px 0;
+	color: #fff;
+	text-align: center;
 }
 
 .sidebar-open {
@@ -92,10 +124,17 @@ header a {
 	overflow-x: scroll;
 }
 
+.screen::-webkit-scrollbar {
+	display: none;
+}
+
 .screen p {
-	font-family: JetBrains Mono;
 	font-size: 6rem;
 	color: #ffffff;
+}
+
+.small-text {
+	font-size: 2.2rem;
 }
 
 .operation-color {
@@ -111,7 +150,6 @@ header a {
 	backdrop-filter: blur(20px);
 	border-radius: 4px;
 	color: #ffffff;
-	font-family: JetBrains Mono;
 	font-size: 2.3rem;
 	box-shadow: 0 0 2px 0 #ffff;
 }
@@ -141,7 +179,6 @@ header a {
 	.sidebar {
 		left: 0;
 		width: 30%;
-
 		height: 100vh;
 	}
 }
