--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,12 @@ header a {
 	z-index: 1000;
 }
 
+.sidebar hr {
+	border-top: 1px solid rgba(255, 255, 255, 0);
+	border-bottom: none;
+	backdrop-filter: blur(20px);
+}
+
 .change-color-container {
 	width: 100%;
 	height: 30%;
@@ -67,9 +73,10 @@ header a {
 }
 
 .operations-container p {
-	font-size: 2.3rem;
+	font-size: 2.5rem;
 	padding: 10px 0;
 	color: #fff;
+	text-shadow: 0 0 1px rgb(0, 0, 0);
 	text-align: center;
 }
 
